# eired

./: Cargo.toml  README.md
eired/: Cargo.toml
eired-display/: Cargo.toml
eired-display/src/: annot.rs  canvas.rs  cell.rs  draw.rs  layer.rs  lib.rs  span.rs  view.rs  window.rs
tests/: Cargo.toml
tests/src/: annot.rs  canvas.rs  cell.rs  draw_cmd.rs  layer.rs  lib.rs  span.rs  view.rs  window.rs
