[workspace]
members = [
    "eired-display",
    "eired",

    "tests",
    # "examples/*"
]

resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
description = ""
readme = "README.md"
authors = ["Tundra_Climate <tundra.tundere@gmail.com>"]
repository = "https://github.com/TundraClimate/eired"
